# Projet_ProgAlgo_S1

./: .gitignore  CMakeLists.txt  README.md
src/: board.cpp  board.hpp  game.cpp  game.hpp  main.cpp  player.cpp  player.hpp
src/connect4/: connect4Board.cpp  connect4Board.hpp  connect4Game.cpp  connect4Game.hpp
